--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,8 @@
 }
 .card-view-content .card-container .note-card {
   position: relative;
-  width: 280px;
+  min-width: 240px;
+  min-height: 100px;
   height: 200px;
   background-color: var(--background-secondary);
   border-radius: 8px;
@@ -1685,11 +1686,21 @@
     transform: rotate(360deg);
   }
 }
+.note-card .note-date.show {
+  display: block;
+}
+.note-card .note-date.hide {
+  display: none;
+}
+
 .note-card-content .note-content {
   display: none;
 }
 .note-card-content .note-content.show {
   display: block;
+}
+.note-card-content .note-content.hide {
+  display: none;
 }
 .note-card-content .note-content.hover-show {
   display: block;
